--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "FriendsBook",
-  "version": "0.0.1",
+  "name": "friends-book",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -10,12 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "6.1.17",
     "@react-navigation/native-stack": "6.9.26",
+    "@reduxjs/toolkit": "2.2.5",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-device-info": "11.1.0",
+    "react-native-localize": "3.1.0",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-redux": "9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,11 +32,14 @@
     "@react-native/typescript-config": "0.74.83",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "3.0.13",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "5.1.7",
+    "redux-logger": "3.0.6",
     "typescript": "5.0.4"
   },
   "engines": {
