--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.74.1",
     "react-native-device-info": "11.1.0",
     "react-native-localize": "3.1.0",
+    "react-native-reanimated": "3.12.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "9.1.2"
